--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -72,11 +78,21 @@ button[type="submit"] {
 
 .book {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
     width: 300px;
     height: 300px;
     background-color: white;
+    border: 1px solid black;
+}
+
+.book-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+    align-items: center;
+}
+
+.book img {
+    height: 70%;
+    width: 100%;
 }
