--- a/styles.css
+++ b/styles.css
@@ -72,16 +72,26 @@ button[type="submit"] {
     min-height: 50px;
 }
 
+button[type="submit"]:hover {
+    background-color: rgb(190, 190, 190);
+}
+
+
+
 .book-container {
     display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+    align-content: flex-start;
 }
 
 .book {
-    display: flex;
+    display: grid;
     width: 300px;
     height: 300px;
     background-color: white;
     border: 1px solid black;
+    grid-template-columns: 1fr 1fr;
 }
 
 .book-left {
@@ -92,7 +102,25 @@ button[type="submit"] {
     align-items: center;
 }
 
+
 .book img {
-    height: 70%;
-    width: 100%;
+    height: 200px;
+    width: 140px;
+}
+
+.removeBookButton {
+    box-sizing: content-box;
+    position: relative;
+    top: 50%;
+    left: 132%;
+    height: 30px;
+    border: none;
+    border-radius: 10px;
+    width: 100px;
+    background-color: hsl(0, 33%, 47%);
+    color: wheat;
+}
+
+.removeBookButton:hover {
+   background-color: hsl(0, 100%, 35%);
 }
