--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@
 }
 
 .book-container {
-    background-color: rgb(40, 40, 40);
-    width: 100vw;
+    background-image: url(imgs/library_bg.png);
+    width: 100vw; 
 }
 
 .form-container {
@@ -83,6 +83,7 @@ button[type="submit"]:hover {
     gap: 5px;
     flex-wrap: wrap;
     align-content: flex-start;
+    overflow: auto;
 }
 
 .book {
@@ -92,6 +93,8 @@ button[type="submit"]:hover {
     background-color: white;
     border: 1px solid black;
     grid-template-columns: 1fr 1fr;
+    border-radius: 5px;
+    margin: 20px;
 }
 
 .book-left {
@@ -100,6 +103,10 @@ button[type="submit"]:hover {
     justify-content: center;
     gap: 15px;
     align-items: center;
+}
+
+.author {
+    text-align: center;
 }
 
 
@@ -123,4 +130,24 @@ button[type="submit"]:hover {
 
 .removeBookButton:hover {
    background-color: hsl(0, 100%, 35%);
+}
+
+#book-container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #fff1d4;
+}
+
+#book-container::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #000000;
+}
+
+#book-container::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #5a5a5a;
 }
