--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     font-size: 24px;
     font-family: 'Roboto', sans-serif;
+    color: white;
 }
 
 .center {
@@ -27,19 +28,37 @@
     width: 100vw; 
 }
 
-.form-container {
-    width: 500px;
+.new-book-button {
+    z-index: 1;
+    background-image: url(imgs/book_material.jpg);
+    background-size: cover;
+    border: none;
     color: white;
+}
+
+.form-container {
+    position: relative;
+    width: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* display: none; */
+    background-image: url(imgs/book_material.jpg);
+    background-size: cover;
 }
 
 .form-container form {
     display: flex;
     gap: 2rem;
     flex-direction: column;
+}
+
+.form-container form input {
+    border-radius: 4px;
+    border: none;
+}
+
+.form-container form input:focus {
+    outline-color: rgb(168, 0, 0);
 }
 
 .wrapper {
@@ -54,8 +73,8 @@
     height: 50px;
 }
 
-.toggle-invis {
-    display: flex;
+.hidden {
+    display: none;
 }
 
 .form-container legend {
@@ -90,7 +109,8 @@ button[type="submit"]:hover {
     display: grid;
     width: 300px;
     height: 300px;
-    background-color: white;
+    background-image: url(imgs/book_material.jpg);
+    background-size: cover;
     border: 1px solid black;
     grid-template-columns: 1fr 1fr;
     border-radius: 5px;
@@ -103,9 +123,6 @@ button[type="submit"]:hover {
     justify-content: center;
     gap: 15px;
     align-items: center;
-}
-
-.author {
     text-align: center;
 }
 
@@ -113,6 +130,7 @@ button[type="submit"]:hover {
 .book img {
     height: 200px;
     width: 140px;
+    border-radius: 5px;
 }
 
 .removeBookButton {
@@ -150,4 +168,24 @@ button[type="submit"]:hover {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #5a5a5a;
+}
+
+#numOfPages {
+    width: 100px;
+}
+
+#title {
+    width: 200px;
+}
+
+#author {
+    width: 300px;
+}
+
+#submit-button {
+    width: 300px;
+}
+
+.form-container fieldset {
+    padding-left: 50px;
 }
