--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,11 @@
     background-color: black;
     height: 100vh;
     display: flex;
-    justify-content: flex-end;
 }
 
 .book-container {
     background-image: url(imgs/library_bg.png);
-    width: 100vw; 
+    width: 100vw;
 }
 
 .new-book-button {
@@ -34,12 +33,29 @@
     background-size: cover;
     border: none;
     color: white;
-    min-width: 150px;
+}
+
+@media (max-width: 574px) {
+    .new-book-button {
+        display: none;
+    }
+    
+    .book-container::after {
+        background-image: url(imgs/deepwork.jpg);
+        width: 100px;
+        height: 100px;
+    }
+}
+
+@media (max-width: 806px) {
+    
+    .form-container {
+        width: 100%;
+    }
 }
 
 .form-container {
     position: relative;
-    width: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -206,4 +222,37 @@ button[type="submit"]:hover {
 
 .form-container fieldset {
     padding-left: 50px;
+}
+
+.mobile-btn-holder {
+    position: absolute;
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%;
+    z-index: 9999;
+}
+
+.mobile-add-book-btn {
+    position: absolute;
+    background: transparent;
+    background-image: url(imgs/addbookbtn.svg);
+    top: 0;
+    right: 0;
+    margin: 10px;
+    width: 100px;
+    height: 100px;
+    border: none;
+    cursor: pointer;
+    background-size: cover; /* You can adjust this property for image sizing */
+    background-repeat: no-repeat;
+  }
+
+@media (max-width: 800px) {
+    .mobile-btn-holder {
+        display: flex;
+    }
+
+    .new-book-button {
+        display: none;
+    }
 }
